// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardDetailView generated file inspection > renders non-empty evidence with summary counters and file list 1`] = `
"<div data-v-c4b684b6="" class="card-detail-container">
  <section data-v-c4b684b6="" class="detail-section header-section" data-testid="card-detail-highlight">
    <div data-v-c4b684b6="" class="detail-title-row"><span data-v-c4b684b6="" class="detail-type-badge type-code">(C) code</span>
      <h1 data-v-c4b684b6="" class="detail-title">Card 1</h1><span data-v-c4b684b6="" class="detail-status-chip status-done">done</span><button data-v-c4b684b6="" type="button" class="discuss-btn" aria-label="Discuss card with analyst">Discuss with analyst</button>
    </div>
    <div data-v-c4b684b6="" class="detail-id">ID: card-1</div>
    <div data-v-c4b684b6="" class="detail-callout" role="status">This card is marked done; review and evidence determine whether operators should accept completion.</div>
    <!---->
    <!---->
    <!---->
  </section>
  <!---->
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Metadata</h3>
    <div data-v-c4b684b6="" class="meta-grid">
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Created</span><span data-v-c4b684b6="" class="meta-value" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Updated</span><span data-v-c4b684b6="" class="meta-value" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Version</span><span data-v-c4b684b6="" class="meta-value">unknown</span></div>
      <!---->
      <!---->
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Priority</span><span data-v-c4b684b6="" class="meta-value">1</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Urgency</span><span data-v-c4b684b6="" class="meta-value">normal</span></div>
      <!---->
      <!---->
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Retries</span><span data-v-c4b684b6="" class="meta-value">0</span></div>
    </div>
  </section>
  <section data-v-8467d0a4="" data-v-c4b684b6="" class="detail-section">
    <div data-v-8467d0a4="" class="panel-header-row">
      <div data-v-8467d0a4="">
        <h3 data-v-8467d0a4="" class="section-heading">Card history</h3>
        <p data-v-8467d0a4="" class="panel-copy">Inspect tracked versions, fetch a full prior snapshot, and compare it to the current card.</p>
      </div>
      <div data-v-8467d0a4="" class="panel-header-actions"><button data-v-8467d0a4="" type="button" class="filter-chip" title="Filter card history by editor (currently: analyst)">by analyst</button><button data-v-8467d0a4="" type="button" class="retry-btn">Refresh history</button></div>
    </div>
    <div data-v-8467d0a4="" class="history-layout">
      <div data-v-8467d0a4="" class="history-list"><button data-v-8467d0a4="" type="button" class="history-item selected">
          <div data-v-8467d0a4="" class="history-item-top"><span data-v-8467d0a4="" class="badge subtle">v2</span><span data-v-8467d0a4="" class="badge">analyst</span><span data-v-8467d0a4="" class="badge analyst-badge">analyst (web-chat)</span><span data-v-8467d0a4="" class="badge subtle">web-chat</span></div>
          <div data-v-8467d0a4="" class="history-summary">updated title</div>
          <div data-v-8467d0a4="" class="history-fields">Changed: title</div>
          <div data-v-8467d0a4="" class="history-time" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</div>
        </button></div>
      <div data-v-8467d0a4="" class="history-detail">
        <div data-v-8467d0a4="" class="empty-evidence">Select a version to inspect its snapshot and diff.</div>
      </div>
    </div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Completion &amp; blockers</h3>
    <div data-v-c4b684b6="" class="meta-grid">
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Completion state</span><span data-v-c4b684b6="" class="meta-value">marked-done</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Evidence readiness</span><span data-v-c4b684b6="" class="meta-value">1 recorded evidence path is blocked by file-access security.</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Child work</span><span data-v-c4b684b6="" class="meta-value">1 children: 1 active/running, 0 blocked/failed, 0 done</span></div>
    </div>
    <div data-v-c4b684b6="" class="link-list-row"><span data-v-c4b684b6="" class="meta-key">Blocking dependencies</span>
      <div data-v-c4b684b6="" class="pill-list"><button data-v-c4b684b6="" type="button" class="nav-pill">goal-1</button></div>
    </div>
    <!---->
    <div data-v-c4b684b6="" class="planning-summary"><strong data-v-c4b684b6="">Planning</strong>
      <div data-v-c4b684b6="">Status: done</div>
      <div data-v-c4b684b6="">Planner completed</div>
      <!---->
      <!---->
      <!---->
    </div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Hierarchy</h3>
    <div data-v-c4b684b6="" class="link-list-row"><span data-v-c4b684b6="" class="meta-key">Ancestors</span>
      <div data-v-c4b684b6="" class="pill-list"><button data-v-c4b684b6="" type="button" class="nav-pill">project</button></div>
    </div>
    <div data-v-c4b684b6="" class="children-list"><button data-v-c4b684b6="" type="button" class="child-row"><span data-v-c4b684b6="" class="generated-file-main"><span data-v-c4b684b6="" class="generated-file-path">child-1</span><span data-v-c4b684b6="" class="badge">test</span><span data-v-c4b684b6="" class="badge status-running">running</span></span><span data-v-c4b684b6="" class="generated-file-description">Child</span></button></div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Evidence &amp; generated files</h3>
    <div data-v-c4b684b6="" class="evidence-summary">1 recorded evidence path is blocked by file-access security.</div>
    <div data-v-c4b684b6="" class="pill-list summary-pills"><span data-v-c4b684b6="" class="badge">Files: 2</span><span data-v-c4b684b6="" class="badge">Checks: 1</span><span data-v-c4b684b6="" class="badge">Tool errors: 1</span>
      <!----><span data-v-c4b684b6="" class="badge error">Blocked: 1</span>
      <!----><span data-v-c4b684b6="" class="badge warning">Parse recovery</span>
    </div>
    <div data-v-c4b684b6="" class="preview-notice warning">Executor final response was malformed; generated files and verification evidence were recovered from tool activity.</div>
    <div data-v-c4b684b6="" class="preview-notice error"><strong data-v-c4b684b6="">Tool Errors</strong>
      <ul data-v-c4b684b6="">
        <li data-v-c4b684b6="">tool warning</li>
      </ul>
    </div>
    <div data-v-c4b684b6="" class="generated-files-list"><button data-v-c4b684b6="" type="button" class="generated-file-row" aria-label="Preview generated file reports/generated.txt, available"><span data-v-c4b684b6="" class="generated-file-main"><span data-v-c4b684b6="" class="generated-file-path">reports/generated.txt</span><span data-v-c4b684b6="" class="badge">generated_files</span>
        <!---->
        <!---->
        <!---->
        <!----></span>
        <!---->
        <!---->
      </button><button data-v-c4b684b6="" type="button" class="generated-file-row disabled" aria-label="Preview generated file .saivage/auth-profiles.json, blocked"><span data-v-c4b684b6="" class="generated-file-main"><span data-v-c4b684b6="" class="generated-file-path">.saivage/auth-profiles.json</span><span data-v-c4b684b6="" class="badge">artifact_paths</span>
        <!---->
        <!---->
        <!----><span data-v-c4b684b6="" class="badge error">blocked</span></span>
        <!----><span data-v-c4b684b6="" class="generated-file-description">Path is outside the project root.</span>
      </button></div>
    <div data-v-c4b684b6="" class="preview-panel" aria-live="polite">
      <div data-v-c4b684b6="" class="preview-empty">Select a generated file to preview safe text content.</div>
    </div>
    <div data-v-c4b684b6="" class="verification-section">
      <h4 data-v-c4b684b6="" class="subheading">Verification Commands</h4>
      <div data-v-c4b684b6="" class="verification-row"><code data-v-c4b684b6="" class="generated-file-path">npm test</code><span data-v-c4b684b6="" class="badge">completed</span><span data-v-c4b684b6="" class="badge success">pass</span>
        <!----><span data-v-c4b684b6="" class="badge subtle">process p1</span>
      </div>
    </div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Review result</h3>
    <div data-v-c4b684b6="" class="detail-callout warning"><strong data-v-c4b684b6="">Not reviewed</strong>
      <div data-v-c4b684b6="">No review result was returned by the card detail API.</div>
    </div>
    <!---->
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Dispatch summary</h3>
    <div data-v-c4b684b6="" class="list-block">
      <div data-v-c4b684b6="" class="meta-key">Outgoing dispatches</div>
      <div data-v-c4b684b6="" class="verification-row"><button data-v-c4b684b6="" type="button" class="nav-pill">child-1</button><span data-v-c4b684b6="" class="badge">completed</span><span data-v-c4b684b6="" class="badge subtle">done</span><span data-v-c4b684b6="">done</span></div>
    </div>
    <!---->
  </section>
  <!---->
  <!---->
</div>"
`;

exports[`CardDetailView generated file inspection > renders structured result values in a formatted pre/code JSON block 1`] = `
"<div data-v-c4b684b6="" class="card-detail-container">
  <section data-v-c4b684b6="" class="detail-section header-section" data-testid="card-detail-highlight">
    <div data-v-c4b684b6="" class="detail-title-row"><span data-v-c4b684b6="" class="detail-type-badge type-code">(C) code</span>
      <h1 data-v-c4b684b6="" class="detail-title">Card 1</h1><span data-v-c4b684b6="" class="detail-status-chip status-done">done</span><button data-v-c4b684b6="" type="button" class="discuss-btn" aria-label="Discuss card with analyst">Discuss with analyst</button>
    </div>
    <div data-v-c4b684b6="" class="detail-id">ID: card-1</div>
    <div data-v-c4b684b6="" class="detail-callout" role="status">This card is marked done; review and evidence determine whether operators should accept completion.</div>
    <!---->
    <!---->
    <!---->
  </section>
  <!---->
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Metadata</h3>
    <div data-v-c4b684b6="" class="meta-grid">
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Created</span><span data-v-c4b684b6="" class="meta-value" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Updated</span><span data-v-c4b684b6="" class="meta-value" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Version</span><span data-v-c4b684b6="" class="meta-value">unknown</span></div>
      <!---->
      <!---->
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Priority</span><span data-v-c4b684b6="" class="meta-value">1</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Urgency</span><span data-v-c4b684b6="" class="meta-value">normal</span></div>
      <!---->
      <!---->
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Retries</span><span data-v-c4b684b6="" class="meta-value">0</span></div>
    </div>
  </section>
  <section data-v-8467d0a4="" data-v-c4b684b6="" class="detail-section">
    <div data-v-8467d0a4="" class="panel-header-row">
      <div data-v-8467d0a4="">
        <h3 data-v-8467d0a4="" class="section-heading">Card history</h3>
        <p data-v-8467d0a4="" class="panel-copy">Inspect tracked versions, fetch a full prior snapshot, and compare it to the current card.</p>
      </div>
      <div data-v-8467d0a4="" class="panel-header-actions"><button data-v-8467d0a4="" type="button" class="filter-chip" title="Filter card history by editor (currently: analyst)">by analyst</button><button data-v-8467d0a4="" type="button" class="retry-btn">Refresh history</button></div>
    </div>
    <div data-v-8467d0a4="" class="history-layout">
      <div data-v-8467d0a4="" class="history-list"><button data-v-8467d0a4="" type="button" class="history-item selected">
          <div data-v-8467d0a4="" class="history-item-top"><span data-v-8467d0a4="" class="badge subtle">v2</span><span data-v-8467d0a4="" class="badge">analyst</span><span data-v-8467d0a4="" class="badge analyst-badge">analyst (web-chat)</span><span data-v-8467d0a4="" class="badge subtle">web-chat</span></div>
          <div data-v-8467d0a4="" class="history-summary">updated title</div>
          <div data-v-8467d0a4="" class="history-fields">Changed: title</div>
          <div data-v-8467d0a4="" class="history-time" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</div>
        </button></div>
      <div data-v-8467d0a4="" class="history-detail">
        <div data-v-8467d0a4="" class="empty-evidence">Select a version to inspect its snapshot and diff.</div>
      </div>
    </div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Completion &amp; blockers</h3>
    <div data-v-c4b684b6="" class="meta-grid">
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Completion state</span><span data-v-c4b684b6="" class="meta-value">marked-done</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Evidence readiness</span><span data-v-c4b684b6="" class="meta-value">1 recorded evidence path is blocked by file-access security.</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Child work</span><span data-v-c4b684b6="" class="meta-value">1 children: 1 active/running, 0 blocked/failed, 0 done</span></div>
    </div>
    <div data-v-c4b684b6="" class="link-list-row"><span data-v-c4b684b6="" class="meta-key">Blocking dependencies</span>
      <div data-v-c4b684b6="" class="pill-list"><button data-v-c4b684b6="" type="button" class="nav-pill">goal-1</button></div>
    </div>
    <!---->
    <div data-v-c4b684b6="" class="planning-summary"><strong data-v-c4b684b6="">Planning</strong>
      <div data-v-c4b684b6="">Status: done</div>
      <div data-v-c4b684b6="">Planner completed</div>
      <!---->
      <!---->
      <!---->
    </div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Hierarchy</h3>
    <div data-v-c4b684b6="" class="link-list-row"><span data-v-c4b684b6="" class="meta-key">Ancestors</span>
      <div data-v-c4b684b6="" class="pill-list"><button data-v-c4b684b6="" type="button" class="nav-pill">project</button></div>
    </div>
    <div data-v-c4b684b6="" class="children-list"><button data-v-c4b684b6="" type="button" class="child-row"><span data-v-c4b684b6="" class="generated-file-main"><span data-v-c4b684b6="" class="generated-file-path">child-1</span><span data-v-c4b684b6="" class="badge">test</span><span data-v-c4b684b6="" class="badge status-running">running</span></span><span data-v-c4b684b6="" class="generated-file-description">Child</span></button></div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Evidence &amp; generated files</h3>
    <div data-v-c4b684b6="" class="evidence-summary">1 recorded evidence path is blocked by file-access security.</div>
    <div data-v-c4b684b6="" class="pill-list summary-pills"><span data-v-c4b684b6="" class="badge">Files: 2</span><span data-v-c4b684b6="" class="badge">Checks: 1</span><span data-v-c4b684b6="" class="badge">Tool errors: 1</span>
      <!----><span data-v-c4b684b6="" class="badge error">Blocked: 1</span>
      <!----><span data-v-c4b684b6="" class="badge warning">Parse recovery</span>
    </div>
    <div data-v-c4b684b6="" class="preview-notice warning">Executor final response was malformed; generated files and verification evidence were recovered from tool activity.</div>
    <div data-v-c4b684b6="" class="preview-notice error"><strong data-v-c4b684b6="">Tool Errors</strong>
      <ul data-v-c4b684b6="">
        <li data-v-c4b684b6="">tool warning</li>
      </ul>
    </div>
    <div data-v-c4b684b6="" class="generated-files-list"><button data-v-c4b684b6="" type="button" class="generated-file-row" aria-label="Preview generated file reports/generated.txt, available"><span data-v-c4b684b6="" class="generated-file-main"><span data-v-c4b684b6="" class="generated-file-path">reports/generated.txt</span><span data-v-c4b684b6="" class="badge">generated_files</span>
        <!---->
        <!---->
        <!---->
        <!----></span>
        <!---->
        <!---->
      </button><button data-v-c4b684b6="" type="button" class="generated-file-row disabled" aria-label="Preview generated file .saivage/auth-profiles.json, blocked"><span data-v-c4b684b6="" class="generated-file-main"><span data-v-c4b684b6="" class="generated-file-path">.saivage/auth-profiles.json</span><span data-v-c4b684b6="" class="badge">artifact_paths</span>
        <!---->
        <!---->
        <!----><span data-v-c4b684b6="" class="badge error">blocked</span></span>
        <!----><span data-v-c4b684b6="" class="generated-file-description">Path is outside the project root.</span>
      </button></div>
    <div data-v-c4b684b6="" class="preview-panel" aria-live="polite">
      <div data-v-c4b684b6="" class="preview-empty">Select a generated file to preview safe text content.</div>
    </div>
    <div data-v-c4b684b6="" class="verification-section">
      <h4 data-v-c4b684b6="" class="subheading">Verification Commands</h4>
      <div data-v-c4b684b6="" class="verification-row"><code data-v-c4b684b6="" class="generated-file-path">npm test</code><span data-v-c4b684b6="" class="badge">completed</span><span data-v-c4b684b6="" class="badge success">pass</span>
        <!----><span data-v-c4b684b6="" class="badge subtle">process p1</span>
      </div>
    </div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Review result</h3>
    <div data-v-c4b684b6="" class="detail-callout warning"><strong data-v-c4b684b6="">Not reviewed</strong>
      <div data-v-c4b684b6="">No review result was returned by the card detail API.</div>
    </div>
    <!---->
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Dispatch summary</h3>
    <div data-v-c4b684b6="" class="list-block">
      <div data-v-c4b684b6="" class="meta-key">Outgoing dispatches</div>
      <div data-v-c4b684b6="" class="verification-row"><button data-v-c4b684b6="" type="button" class="nav-pill">child-1</button><span data-v-c4b684b6="" class="badge">completed</span><span data-v-c4b684b6="" class="badge subtle">done</span><span data-v-c4b684b6="">done</span></div>
    </div>
    <!---->
  </section>
  <!---->
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Result</h3><pre data-v-c4b684b6="" class="detail-json"><code data-v-c4b684b6="">{
  "planning": {
    "status": "blocked",
    "blocked_reason": "needs input"
  }
}</code></pre>
  </section>
</div>"
`;

exports[`CardDetailView generated file inspection > renders the empty evidence state as one sentence without counters or preview placeholder 1`] = `
"<div data-v-c4b684b6="" class="card-detail-container">
  <section data-v-c4b684b6="" class="detail-section header-section" data-testid="card-detail-highlight">
    <div data-v-c4b684b6="" class="detail-title-row"><span data-v-c4b684b6="" class="detail-type-badge type-code">(C) code</span>
      <h1 data-v-c4b684b6="" class="detail-title">Card 1</h1><span data-v-c4b684b6="" class="detail-status-chip status-done">done</span><button data-v-c4b684b6="" type="button" class="discuss-btn" aria-label="Discuss card with analyst">Discuss with analyst</button>
    </div>
    <div data-v-c4b684b6="" class="detail-id">ID: card-1</div>
    <div data-v-c4b684b6="" class="detail-callout" role="status">This card is marked done; review and evidence determine whether operators should accept completion.</div>
    <!---->
    <!---->
    <!---->
  </section>
  <!---->
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Metadata</h3>
    <div data-v-c4b684b6="" class="meta-grid">
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Created</span><span data-v-c4b684b6="" class="meta-value" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Updated</span><span data-v-c4b684b6="" class="meta-value" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Version</span><span data-v-c4b684b6="" class="meta-value">unknown</span></div>
      <!---->
      <!---->
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Priority</span><span data-v-c4b684b6="" class="meta-value">1</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Urgency</span><span data-v-c4b684b6="" class="meta-value">normal</span></div>
      <!---->
      <!---->
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Retries</span><span data-v-c4b684b6="" class="meta-value">0</span></div>
    </div>
  </section>
  <section data-v-8467d0a4="" data-v-c4b684b6="" class="detail-section">
    <div data-v-8467d0a4="" class="panel-header-row">
      <div data-v-8467d0a4="">
        <h3 data-v-8467d0a4="" class="section-heading">Card history</h3>
        <p data-v-8467d0a4="" class="panel-copy">Inspect tracked versions, fetch a full prior snapshot, and compare it to the current card.</p>
      </div>
      <div data-v-8467d0a4="" class="panel-header-actions"><button data-v-8467d0a4="" type="button" class="filter-chip" title="Filter card history by editor (currently: analyst)">by analyst</button><button data-v-8467d0a4="" type="button" class="retry-btn">Refresh history</button></div>
    </div>
    <div data-v-8467d0a4="" class="history-layout">
      <div data-v-8467d0a4="" class="history-list"><button data-v-8467d0a4="" type="button" class="history-item selected">
          <div data-v-8467d0a4="" class="history-item-top"><span data-v-8467d0a4="" class="badge subtle">v2</span><span data-v-8467d0a4="" class="badge">analyst</span><span data-v-8467d0a4="" class="badge analyst-badge">analyst (web-chat)</span><span data-v-8467d0a4="" class="badge subtle">web-chat</span></div>
          <div data-v-8467d0a4="" class="history-summary">updated title</div>
          <div data-v-8467d0a4="" class="history-fields">Changed: title</div>
          <div data-v-8467d0a4="" class="history-time" title="Jan 1, 2025, 12:00:00 AM">Jan 1, 2025, 12:00:00 AM</div>
        </button></div>
      <div data-v-8467d0a4="" class="history-detail">
        <div data-v-8467d0a4="" class="empty-evidence">Select a version to inspect its snapshot and diff.</div>
      </div>
    </div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Completion &amp; blockers</h3>
    <div data-v-c4b684b6="" class="meta-grid">
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Completion state</span><span data-v-c4b684b6="" class="meta-value">marked-done</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Evidence readiness</span><span data-v-c4b684b6="" class="meta-value">No evidence summary returned.</span></div>
      <div data-v-c4b684b6="" class="meta-item"><span data-v-c4b684b6="" class="meta-key">Child work</span><span data-v-c4b684b6="" class="meta-value">1 children: 1 active/running, 0 blocked/failed, 0 done</span></div>
    </div>
    <div data-v-c4b684b6="" class="link-list-row"><span data-v-c4b684b6="" class="meta-key">Blocking dependencies</span>
      <div data-v-c4b684b6="" class="pill-list"><button data-v-c4b684b6="" type="button" class="nav-pill">goal-1</button></div>
    </div>
    <!---->
    <div data-v-c4b684b6="" class="planning-summary"><strong data-v-c4b684b6="">Planning</strong>
      <div data-v-c4b684b6="">Status: done</div>
      <div data-v-c4b684b6="">Planner completed</div>
      <!---->
      <!---->
      <!---->
    </div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Hierarchy</h3>
    <div data-v-c4b684b6="" class="link-list-row"><span data-v-c4b684b6="" class="meta-key">Ancestors</span>
      <div data-v-c4b684b6="" class="pill-list"><button data-v-c4b684b6="" type="button" class="nav-pill">project</button></div>
    </div>
    <div data-v-c4b684b6="" class="children-list"><button data-v-c4b684b6="" type="button" class="child-row"><span data-v-c4b684b6="" class="generated-file-main"><span data-v-c4b684b6="" class="generated-file-path">child-1</span><span data-v-c4b684b6="" class="badge">test</span><span data-v-c4b684b6="" class="badge status-running">running</span></span><span data-v-c4b684b6="" class="generated-file-description">Child</span></button></div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Evidence &amp; generated files</h3>
    <div data-v-c4b684b6="" class="empty-evidence">No evidence has been recorded for this card.</div>
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Review result</h3>
    <div data-v-c4b684b6="" class="detail-callout warning"><strong data-v-c4b684b6="">Not reviewed</strong>
      <div data-v-c4b684b6="">No review result was returned by the card detail API.</div>
    </div>
    <!---->
  </section>
  <section data-v-c4b684b6="" class="detail-section">
    <h3 data-v-c4b684b6="" class="section-heading">Dispatch summary</h3>
    <div data-v-c4b684b6="" class="list-block">
      <div data-v-c4b684b6="" class="meta-key">Outgoing dispatches</div>
      <div data-v-c4b684b6="" class="verification-row"><button data-v-c4b684b6="" type="button" class="nav-pill">child-1</button><span data-v-c4b684b6="" class="badge">completed</span><span data-v-c4b684b6="" class="badge subtle">done</span><span data-v-c4b684b6="">done</span></div>
    </div>
    <!---->
  </section>
  <!---->
  <!---->
</div>"
`;
